Improved <title> SEO

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="author" content="Muhammed Bacalan">
   <meta name="description" content="GW2Bot is a powerful, Guild Wars 2 bot for Discord!">
   <meta name="keywords" content="gw2, gw2bot, gw2 discord, discord bot">
-  <title>GW2Bot - A Discord Bot</title>
+  <title>GW2Bot - A Discord Bot for Guild Wars 2</title>
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Guild Wars 2 Bot">
   <meta property="og:description" content="GW2Bot is a powerful, Guild Wars 2 bot for Discord!">
