Browser compatability, accessibility, SEO, and semantic improvements

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header>
     <picture>
       <source media="(min-width: 1045px)" srcset="/static/img/banner.jpg">
-      <img src="/static/img/banner--mobile.jpg" alt="GW2Bot Logo">
+      <img src="/static/img/banner--mobile.jpg" height="301" alt="GW2Bot Logo">
     </picture>
     <div class="page-width page-padding">
       <span class="sr-only">GW2Bot - A Discord Bot for Guild Wars 2</span>
@@ -54,7 +54,7 @@
 
       <div class="button-container">
         <a id="patreon" class="button button--large button--patreon" href="https://www.patreon.com/bePatron?u=9811418" target="_blank">
-          <img src="/static/img/patreon.svg">Become a Patron
+          <img src="/static/img/patreon.svg" alt="Patreon Icon">Become a Patron
         </a>
 
         <form id="paypal" class="psuedo-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
@@ -62,10 +62,10 @@
           <input type="hidden" name="hosted_button_id" value="96N5SP5FYTTGJ">
 
           <button class='button button--large button--paypal' name='submit' type='submit'>
-            <img src="/static/img/paypal.svg">Donate with PayPal
+            <img src="/static/img/paypal.svg" alt="PayPal Icon">Donate with PayPal
           </button>
 
-          <img class="sr-only" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif">
+          <img class="sr-only" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" aria-hidden="true">
         </form>
       </div>
     </div>
