--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 <body>
   <header>
     <picture>
-      <source media="(min-width: 1045px)" srcset="/static/img/banner.jpg">
-      <img src="/static/img/banner--mobile.jpg" height="301" alt="GW2Bot Logo">
+      <source media="(min-width: 1045px)" srcset="/static/img/banner.png">
+      <source media="(min-width: 801px)" srcset="/static/img/banner--tablet.png">
+      <img src="/static/img/banner--mobile.png" height="301" alt="GW2Bot Logo">
     </picture>
     <div class="page-width page-padding">
       <span class="sr-only">GW2Bot - A Discord Bot for Guild Wars 2</span>
@@ -48,25 +49,29 @@
     <hr>
 
     <div class="page-width page-padding">
-      <span class="h2">Keep GW2Bot Running</span>
+      <span class="h2">Contribute to GW2Bot</span>
 
-      <p>GW2Bot will remain free to use, and runs on kind donations and volunteer contributions!</p>
+      <p>GW2Bot will remain free to use and continues to run with kind donations and volunteer contributions.<br>If you enjoy using GW2Bot, please consider donating to fund future development!</p>
 
-      <div class="button-container">
-        <a id="patreon" class="button button--large button--patreon" href="https://www.patreon.com/bePatron?u=9811418" target="_blank">
-          <img src="/static/img/patreon.svg" alt="Patreon Icon">Become a Patron
-        </a>
+      <div class="flexbox">
+        <div class="flexbox__item">
+          <a id="patreon" class="button button--large button--patreon" href="https://www.patreon.com/bePatron?u=9811418" target="_blank">
+            <img src="/static/img/patreon.svg" alt="Patreon Icon">Become a Patron
+          </a>
+        </div>
 
-        <form id="paypal" class="psuedo-button" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-          <input type="hidden" name="cmd" value="_s-xclick">
-          <input type="hidden" name="hosted_button_id" value="96N5SP5FYTTGJ">
+        <div class="flexbox__item">
+          <form id="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="96N5SP5FYTTGJ">
 
-          <button class='button button--large button--paypal' name='submit' type='submit'>
-            <img src="/static/img/paypal.svg" alt="PayPal Icon">Donate with PayPal
-          </button>
+            <button class='button button--large button--paypal' name='submit' type='submit'>
+              <img src="/static/img/paypal.svg" alt="PayPal Icon">Donate with PayPal
+            </button>
 
-          <img class="sr-only" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" aria-hidden="true">
-        </form>
+            <img class="sr-only" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" aria-hidden="true">
+          </form>
+        </div>
       </div>
     </div>
   </div>
