Eliminate render-blocking CSS (Google fonts)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media')" href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap">
+  </noscript>
   <!-- If IE use the latest rendering engine -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png">
