--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media')" href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Roboto:wght@400&display=swap" as="style">
+  <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media')" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Roboto:wght@400;700&family=Roboto+Mono:wght@400;600&display=swap">
   <noscript>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Roboto:wght@400;700&family=Roboto+Mono:wght@400;600&display=swap">
   </noscript>
   <!-- If IE use the latest rendering engine -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -32,35 +34,20 @@
 </head>
 
 <body>
-  <header>
-    <picture>
-      <source media="(min-width: 1045px)" srcset="/static/img/banner.png">
-      <source media="(min-width: 801px)" srcset="/static/img/banner--tablet.png">
-      <img src="/static/img/banner--mobile.png" height="301" alt="GW2Bot Logo">
-    </picture>
-    <div class="page-width page-padding">
-      <span class="sr-only">GW2Bot - A Discord Bot for Guild Wars 2</span>
-
-      <span id="api-status" title="If API is offline, the bot will not function properly">Checking API...</span>
-    </div>
-  </header>
-
   <div id="app"></div>
   <!-- built files will be auto injected -->
 
   <div class="patreon">
-    <hr>
-
     <div class="page-width page-padding">
+      <hr>
+
       <span class="h2">Contribute to GW2Bot</span>
 
       <p>GW2Bot will remain free to use and continues to run with kind donations and volunteer contributions.<br>If you enjoy using GW2Bot, please consider donating to fund future development!</p>
 
       <div class="flexbox">
         <div class="flexbox__item">
-          <a id="patreon" class="button button--large button--patreon" href="https://www.patreon.com/bePatron?u=9811418" target="_blank">
-            <img src="/static/img/patreon.svg" alt="Patreon Icon">Become a Patron
-          </a>
+          <a id="patreon" class="button button--large button--patreon" href="https://www.patreon.com/bePatron?u=9811418" target="_blank">Become a Patron</a>
         </div>
 
         <div class="flexbox__item">
@@ -68,9 +55,7 @@
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="96N5SP5FYTTGJ">
 
-            <button class='button button--large button--paypal' name='submit' type='submit'>
-              <img src="/static/img/paypal.svg" alt="PayPal Icon">Donate with PayPal
-            </button>
+            <button class='button button--large button--paypal' name='submit' type='submit'>Donate with PayPal</button>
 
             <img class="sr-only" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" aria-hidden="true">
           </form>
@@ -81,7 +66,7 @@
 
   <footer>
     <div class="page-width page-padding">
-      <p><small>&copy;2022&nbsp;-&nbsp;GW2Bot created by&nbsp;Maselkov#2365, Website created by&nbsp;Penemue#8514 and design updated by&nbsp;Mattt#7551</br>If you want to contribute, see <a href="https://github.com/Maselkov/GW2Bot" target="_blank">here for the bot</a> and <a href="https://github.com/pen-mb/gw2bot-site" target="_blank">here for the website</a>. Thanks to all contributors.</small></p>
+      <p><small>&copy;2022&nbsp;-&nbsp;GW2Bot created by&nbsp;Maselkov#2365, Website created by&nbsp;Penemue#8514 and design updated by&nbsp;Mattt#7551<br>If you want to contribute, see <a href="https://github.com/Maselkov/GW2Bot" target="_blank">here for the bot</a> and <a href="https://github.com/pen-mb/gw2bot-site" target="_blank">here for the website</a>. Thanks to all contributors.</small></p>
       <p><small>Guild Wars 2 Logo and all associated logos and designs are trademarks or registered trademarks of NCSOFT Corporation.</small></p>
     </div>
   </footer>
