--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns#">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" prefix="og: https://ogp.me/ns#">
 
 <head>
   <meta charset="utf-8">
@@ -28,9 +28,22 @@
   <!-- Open Graph Tags -->
   <meta property="og:title" content="GW2Bot - A Discord Bot for Guild Wars 2">
   <meta property="og:description" content="GW2Bot is a powerful Guild Wars 2 bot for Discord!">
-  <meta property="og:type" content="article">
-  <meta property="og:url" content="http://www.gw2bot.info">
-  <meta property="og:image" content="https://gw2bot.info/static/img/avatarwithtext.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://gw2bot.info">
+  <meta property="og:image" content="https://gw2bot.info/static/img/og-image.png">
+
+  <script>
+    function goDark() {
+      document.documentElement.className = "dark-mode";
+    }
+    if(/darkMode=true/.test(document.cookie)) {
+      goDark();
+    } else if(!/darkMode/.test(document.cookie)&&window.matchMedia) {
+      if(window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        goDark();
+      }
+    }
+  </script>
 </head>
 
 <body>
@@ -55,7 +68,7 @@
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="96N5SP5FYTTGJ">
 
-            <button class='button button--large button--paypal' name='submit' type='submit'>Donate with PayPal</button>
+            <button class="button button--large button--paypal" name="submit" type="submit">Donate with PayPal</button>
 
             <img class="sr-only" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" aria-hidden="true">
           </form>
