--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Roboto:wght@400&display=swap" as="style">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap" as="style" crossorigin>
   <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media')" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Roboto:wght@400;700&family=Roboto+Mono:wght@400;600&display=swap">
   <noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Roboto:wght@400;700&family=Roboto+Mono:wght@400;600&display=swap">
