Created a privacy policy! + added link in footer

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
 
   <footer>
     <div class="page-width page-padding">
-      <p><small>&copy;2022&nbsp;-&nbsp;GW2Bot created by&nbsp;Maselkov#2365, Website created by&nbsp;Penemue#8514 and design updated by&nbsp;Mattt#7551<br>If you want to contribute, see <a href="https://github.com/Maselkov/GW2Bot" target="_blank">here for the bot</a> and <a href="https://github.com/pen-mb/gw2bot-site" target="_blank">here for the website</a>. Thanks to all contributors.</small></p>
-      <p><small>Guild Wars 2 Logo and all associated logos and designs are trademarks or registered trademarks of NCSOFT Corporation.</small></p>
+      <p><small>&copy;2022&nbsp;-&nbsp;GW2Bot created by&nbsp;Maselkov#2365, Website created by&nbsp;Penemue#8514 and design updated by&nbsp;Mattt#7551<br>If you want to contribute, see <a href="https://github.com/Maselkov/GW2Bot" target="_blank">here for the bot</a> and <a href="https://github.com/pen-mb/gw2bot-site" target="_blank">here for the website</a>. Thanks to all&nbsp;contributors.</small></p>
+      <p><small>Please read the <a href="/privacy-policy">Privacy Policy</a> if you have any privacy conerns about GW2Bot, and join the <a href="https://discord.gg/VyQTrwP" target="_blank">GW2Bot Discord Server</a> for further&nbsp;support.</small></p>
+      <p><small>Guild Wars 2 Logo and all associated logos and designs are trademarks or registered trademarks of NCSOFT&nbsp;Corporation.</small></p>
     </div>
   </footer>
 
