Set theme-color to #C12D2B + Change og-image to clippy with transparency

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
   <noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Roboto:wght@400;700&family=Roboto+Mono:wght@400;600&display=swap">
   </noscript>
-  <!-- If IE use the latest rendering engine -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png">
   <link rel="manifest" href="/static/img/manifest.json">
   <link rel="mask-icon" href="/static/img/safari-pinned-tab.svg" color="#b40000">
+  <meta name="theme-color" content="#C12D2B">
   <meta name="msapplication-TileColor" content="#fff">
-  <meta name="theme-color" content="#fff">
+  <meta name="application-name" content="GW2Bot">
   <meta name="author" content="Muhammed Bacalan">
   <meta name="description" content="GW2Bot is a powerful Guild Wars 2 bot for Discord!">
   <meta name="keywords" content="gw2, gw2bot, gw2 discord, discord bot">
@@ -31,6 +30,8 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://gw2bot.info">
   <meta property="og:image" content="https://gw2bot.info/static/img/og-image.png">
+  <!-- If IE use the latest rendering engine -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <script>
     function goDark() {
